parent profile working fine